z-index issue fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 1000%;
-    /* z-index: -10; */
+    z-index: -10;
     opacity: .4;
     background-repeat: repeat;
 }
